# CHMM

./: CMakeLists.txt  README.md
include/: CHMM.h  State.h  hash_utils.h  probably.h
src/: CHMM.cpp  State.cpp  main.cpp  probably.cpp
